testdata/baselines/reference/submodule/compiler/symbolObserverMismatchingPolyfillsWorkTogether.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
symbolObserverMismatchingPolyfillsWorkTogether.ts(5,14): error TS2717: Subsequent property declarations must have the same type.  Property 'observer' must be of type 'symbol', but here has type 'unique symbol'.
symbolObserverMismatchingPolyfillsWorkTogether.ts(9,6): error TS2304: Cannot find name 'Symbol'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== symbolObserverMismatchingPolyfillsWorkTogether.ts (2 errors) ====
    interface SymbolConstructor {
        readonly observer: symbol;
    }
    interface SymbolConstructor {
        readonly observer: unique symbol;
                 ~~~~~~~~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'observer' must be of type 'symbol', but here has type 'unique symbol'.
!!! related TS6203 symbolObserverMismatchingPolyfillsWorkTogether.ts:2:14: 'observer' was also declared here.
    }
    
    const obj = {
        [Symbol.observer]: 0
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    };